--- a/dom.html
+++ b/dom.html
@@ -18,7 +18,7 @@
 			</div>
 
 			<div class="tab">
-				<span class="tab-header">时间</span>
+				<span class="tab-header">时&emsp;间</span>
 				<input type="text" class="tab-input" placeholder="yyyy-mm-dd" id="input-time">
 			</div>
 		</div>
