--- a/dom.html
+++ b/dom.html
@@ -18,8 +18,14 @@
 			</div>
 
 			<div class="tab">
+				<span class="tab-header">日&emsp;期</span>
+				<input type="text" class="tab-input" placeholder="mm-dd" id="input-time">
+			</div>
+
+			<div class="tab">
 				<span class="tab-header">时&emsp;间</span>
-				<input type="text" class="tab-input" placeholder="yyyy-mm-dd" id="input-time">
+				<input type="time" class="tab-input" id="time-start">
+				<input type="time" class="tab-input" id="time-end">
 			</div>
 		</div>
 		<div class="button-area">
